--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/material": "^5.14.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6"
+    "recharts": "^3.1.2"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
